Fix: Problem solutions