@@ -4,6 +4,7 @@ import co.com.ancas.models.enums.Constants;
 import co.com.ancas.models.enums.Messages;
 import co.com.ancas.models.exceptions.BadRequestException;
 import co.com.ancas.models.exceptions.ForbiddenException;
+import co.com.ancas.models.exceptions.NotFoundException;
 import co.com.ancas.models.model.*;
 import co.com.ancas.models.repositories.LoanRepositoryPort;
 import co.com.ancas.uses_cases.interfaces.IUseCase;
@@ -15,9 +16,10 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.time.LocalDate;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+
+import static co.com.ancas.models.enums.Constants.NO;
+import static co.com.ancas.models.enums.Constants.YES;
 
 @Component
 @RequiredArgsConstructor
@@ -27,28 +29,24 @@ public class ReturnLoanAdapter implements IUseCase<List<LoanReturn>, LoanReturnR
     private final FindUserAndMembershipInfoByUserIdAdapter findUserAndMembershipInfoByUserIdAdapter;
 
     @Override
-    public LoanReturnResult execute(List<LoanReturn> loans) throws MessagingException, IOException {
-        List<Loan> loansFound = loanRepositoryPort.findLoansByIds(loans.stream().map(LoanReturn::getIdLoan).toList());
-        if(loansFound.size()!=loans.size() || loansFound.isEmpty()){
+    public LoanReturnResult execute(List<LoanReturn> loanReturns) throws MessagingException, IOException {
+        List<Loan> loansFound = loanRepositoryPort.findLoansByIds(loanReturns.stream().map(LoanReturn::getIdLoan).toList());
+        if(loansFound.isEmpty() || loansFound.size()!=loanReturns.size()){
             throw new BadRequestException(Messages.MESSAGE_ERROR_LOANS_FOUND.getMessage());
         }
         verifyUserIdDifferent(loansFound);
-        Long iduser = loansFound.get(0).getUserId();
+        Long iduser = loansFound.getFirst().getUserId();
         verifyCurrentUserId(iduser);
-        UserMembershipInfo userMembershipInfoFound=findUserAndMembershipInfoByUserIdAdapter.execute(iduser);
-        Integer totalDelayedDays=0;
-        Double totalFine=0.0;
+        UserMembershipInfo membershipInfo=findUserAndMembershipInfoByUserIdAdapter.execute(iduser);
+        int totalDelayedDays=0;
+        double totalFine=0.0;
         for(Loan loan:loansFound){
-            loan.setReturnDate(LocalDate.now());
-            Integer delayedDays = calculateDelayedDays(loan, userMembershipInfoFound);
-            loan.setDaysDelayed(delayedDays);
-            Double fine = userMembershipInfoFound.getDailyFine()*delayedDays;
-            loan.setFine(fine);
-            loan.setPaid(Constants.YES.getConstant());
-            loan.setComments(findLoanComments(loans,loan));
+            LoanReturn matchedLoanReturn = findLoanReturn(loanReturns, loan);
+            updateLoanDetails(loan, matchedLoanReturn, membershipInfo);
+            boolean paid=loan.getPaid().equals(YES.getConstant());
+            totalDelayedDays += paid?loan.getDaysDelayed():0;
+            totalFine += paid?loan.getFine():0.0;
             loanRepositoryPort.save(loan);
-            totalDelayedDays+=delayedDays;
-            totalFine+=fine;
         }
         return LoanReturnResult.builder()
                 .delayedDays(totalDelayedDays)
@@ -56,21 +54,33 @@ public class ReturnLoanAdapter implements IUseCase<List<LoanReturn>, LoanReturnR
                 .build();
     }
 
-    private String findLoanComments(List<LoanReturn> loans, Loan loan) {
-        return loans.stream().filter(loanReturn -> loanReturn.getIdLoan().equals(loan.getId())).findFirst().get().getComment();
+
+    private void updateLoanDetails(Loan loan, LoanReturn loanReturn, UserMembershipInfo membershipInfo) {
+        loan.setReturnDate(LocalDate.now());
+        int delayedDays = calculateDelayedDays(loan, membershipInfo);
+        loan.setDaysDelayed(delayedDays);
+
+        double fine = membershipInfo.getDailyFine() * delayedDays;
+        loan.setFine(fine);
+
+        loan.setPaid(loanReturn.getFine().equals(fine) ? YES.getConstant() : NO.getConstant());
+        loan.setComments(loanReturn.getComment());
     }
 
     private Integer calculateDelayedDays(Loan loan,UserMembershipInfo userMembershipInfoFound) {
         if(!loan.getReturnDate().isAfter(loan.getDueDate())){
             return 0;
         }
-        Integer delayedDays= (int) (loan.getReturnDate().toEpochDay()-loan.getDueDate().toEpochDay());
+        int delayedDays= (int) (loan.getReturnDate().toEpochDay()-loan.getDueDate().toEpochDay());
         return delayedDays>userMembershipInfoFound.getGracePeriodDays()?delayedDays:0;
     }
 
     private void verifyUserIdDifferent(List<Loan> loansFound) {
         Set<Long> userIds = new HashSet<>();
         for (Loan loan : loansFound) {
+            if(Objects.nonNull(loan.getReturnDate())){
+                throw new BadRequestException(Messages.MESSAGE_ERROR_LOAN_ALREADY_RETURNED.getMessage());
+            }
             userIds.add(loan.getUserId());
         }
         if (userIds.size() > 1) {
@@ -82,5 +92,13 @@ public class ReturnLoanAdapter implements IUseCase<List<LoanReturn>, LoanReturnR
         if(currentUserInformationFound.getRole().equalsIgnoreCase(Constants.USER.getConstant()) && !currentUserInformationFound.getUserId().equals(userId)){
             throw new ForbiddenException(Messages.MESSAGE_GENERAL_FORBIDDEN.getMessage());
         }
+    }
+
+    private LoanReturn findLoanReturn(List<LoanReturn> loans, Loan loan) {
+        Optional<LoanReturn> loanFound= loans.stream().filter(loanReturn -> loanReturn.getIdLoan().equals(loan.getId())).findFirst();
+        if (loanFound.isEmpty()){
+            throw new NotFoundException(Messages.MESSAGE_ERROR_LOAN_NOT_FOUND.getMessage());
+        }
+        return loanFound.get();
     }
 }
